# howmanypizzas

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
data/: check_ins.csv  meetup_data.md  sf_python_2023_11_15.csv  sf_python_2023_2_8.csv  sf_python_2023_6_14.csv  sf_python_2023_9_13.csv  sf_python_2024_10_9.csv  sf_python_2024_11_13.csv  sf_python_2024_2_21.csv  sf_python_2024_3_13.csv  sf_python_2024_4_10.csv  sf_python_2024_6_12.csv  sf_python_2024_7_10.csv  sf_python_2024_8_14.csv  sf_python_2025_1_8.csv  sf_python_2025_2_12.csv  sf_python_2025_3_12.csv  sf_python_2025_4_9.csv  sf_python_2025_5_14.csv  sf_python_2025_6_11.csv  sf_python_2025_7_16.csv
data-exploration/: exploration.ipynb
scripts/: make_venv.bat
src/howmanypizzas/: __init__.py  __main__.py  read_data.py
src/howmanypizzas/models/: ols_model_v1.pickle  ols_model_v1.py
tests/: __init__.py
