[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "howmanypizzas"
version = "0.1.0"
description = "A CLI application to calculate how many pizzas to order for meetups"
authors = [
    {name = "SF Python Meetup", email = "info@bapya.org"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ismain",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
howmanypizzas = "howmanypizzas.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/howmanypizzas"
Repository = "https://github.com/yourusername/howmanypizzas"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/howmanypizzas"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true